# QSB-USB2Serial

./: README.md  qsb-helloworld.c  qsb-helloworld.cpp  streaming_data_setup.cpp  usb_Udev_rules_change_names
encoder_data/: CMakeLists.txt  package.xml
encoder_data/msg/: encoderval.msg
encoder_data/src/: encoder_QSB.cpp
